--- a/index.html
+++ b/index.html
@@ -69,12 +69,12 @@
 
              <!-- email -->
             <div class="form-group">
-              <label for="prenom">Email</label>
+              <label for="Email">Email</label>
               <input
                 type="Email"
-                name="email"
+                name="Email"
                 class="form-control"
-                id="prenom"
+                id="Email"
                 placeholder="alkshg@gmail.com"
               />
             </div>
