--- a/index.html
+++ b/index.html
@@ -69,12 +69,12 @@
 
              <!-- email -->
             <div class="form-group">
-              <label for="Email">Email</label>
+              <label for="email">Email</label>
               <input
-                type="Email"
-                name="Email"
+                type="email"
+                name="email"
                 class="form-control"
-                id="Email"
+                id="email"
                 placeholder="alkshg@gmail.com"
               />
             </div>
