--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 class="form-control"
                 id="email"
                 placeholder="alkshg@gmail.com"
-              />
+             required />
             </div>
 
             <div class="form-group">
@@ -66,7 +66,7 @@
                 class="form-control"
                 id="contact"
                 placeholder="+241077051911"
-              />
+            required  />
             </div>
 
             <!-- name -->
@@ -78,7 +78,7 @@
                 class="form-control"
                 id="denominationsociale"
                 placeholder="nom de votre entreprise"
-              />
+            required  />
             </div>
 
             <!-- email -->
@@ -90,7 +90,7 @@
                 class="form-control"
                 id="anneecreation"
                 placeholder="année de création de votre entreprise"
-              />
+             required />
             </div>
 
 
@@ -103,7 +103,7 @@
                 class="form-control"
                 id="FormeJuridique"
                 placeholder="SARL..."
-              />
+            required  />
             </div>
 
 
@@ -116,7 +116,7 @@
                 class="form-control"
                 id="nombresalaries"
                 placeholder="nombre de salariés de l'entreprise"
-              />
+            required  />
             </div>
 
 
